@@ -1,4 +1,6 @@
- $Id: ChangeLog,v 1.11 2007/01/14 14:29:30 mkern Exp $
+ $Id: ChangeLog,v 1.12 2007/01/14 16:47:05 mkern Exp $
+
+	* Only connect to new supernodes which don't require encryption.
 
 	* Added 3 minute periodic stats ping to supernode.
 
